Add top-level README and fix signature format