@@ -6,7 +6,6 @@ import lombok.extern.slf4j.Slf4j;
 import javax.crypto.Mac;
 import javax.crypto.spec.SecretKeySpec;
 import java.util.Arrays;
-import java.util.Base64;
 
 @Slf4j
 @UtilityClass
@@ -19,7 +18,7 @@ public class HmacUtil {
             Mac mac = Mac.getInstance(HMAC_ALGORITHM);
             mac.init(secretKey);
             byte[] hmacData = mac.doFinal(data.getBytes());
-            return Base64.getEncoder().encodeToString(hmacData);
+            return javax.xml.bind.DatatypeConverter.printHexBinary(hmacData).toLowerCase();
         } catch (Exception ex) {
             log.error("Error while generating Hmac {}", ex);
         }
